# IIS

./: Dockerfile  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: deploy-model.yml  python-app.yml
data/processed/: .gitignore  current_data.csv  data_drift.html  futureweather.csv  obdelani.csv.dvc  obdelaniair.csv  obdelaniair.csv.dvc  obdelaniweather.csv  obdelaniweather.csv.dvc  reference_data.csv  test.csv  train.csv
data/raw/air/: neobdelani.json.dvc
data/raw/weather/: .gitignore  neobdelani.json  neobdelani.json.dvc
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: my_checkpoint.yml
great_expectations/expectations/: .ge_store_backend_id  my_suite.json
models/: model.pkl
reports/: metrics.txt  train_metrics.txt
src/: __init__.py
src/client/: Dockerfile  weatherapp.py
src/data/: Untitled.ipynb  fetch_data.py  fetch_weather_data.py  future_data.py  merge.py  process_data.py  process_weather_data.py  test_evidently.py  train_test_split.py
src/models/: model.pkl  train_model.py  train_model_old.py
src/serve/: Dockerfile  server.py  test.py
