[tool.poetry]
name = "vaja1"
version = "0.1.0"
description = ""
authors = ["nick.812 <nik.jeromel@student.um.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
fastapi = "^0.92.0"
pydantic = "^1.10.5"
uvicorn = "^0.20.0"
requests = "^2.28.2"
pytest = "^7.2.1"
scikit-learn = "^1.2.1"
pandas = "^1.5.3"
httpx = "^0.23.3"
dvc = "^2.50.0"
dvc-gdrive = "^2.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
